# arxiv-pipeline

./: .gitignore  README.md  main.py  prefect.yaml  pyproject.toml  requirements.txt
configs/: config.yml
src/arxiv_pipeline/: __init__.py
src/arxiv_pipeline/data/: schemas.py
src/arxiv_pipeline/flows/: __init__.py  data_flow.py  orchestration.py  recommendation_flow.py  training_flow.py
src/arxiv_pipeline/models/: __init__.py  classifier.py  sentence_model.py
src/arxiv_pipeline/tasks/: __init__.py  annotation.py  fetch.py  process.py  recommendations.py  storage.py  training.py
src/arxiv_pipeline/utils/: config.py  minio_client.py
